update examples up to boot 3