@@ -1,16 +1,12 @@
 plugins {
-  id 'java'
-  id 'war'
-  id 'application'
-  id 'idea'
+	id 'java'
+	//id 'war'
+	id 'application'
+	id 'idea'
 
-  alias(libs.plugins.grettyWebContainer)
 	alias(libs.plugins.spring.boot)
-	alias(libs.plugins.spring.dependencyManagement)
-	//alias(libs.plugins.ebean)
 
 	alias(libs.plugins.lombok)
-	alias(libs.plugins.sonarlint)
 	alias(libs.plugins.errorprone)
 	alias(libs.plugins.gradleGitProperties)
 }
@@ -18,71 +14,64 @@ plugins {
 //  toolchain { languageVersion = JavaLanguageVersion.of(8) }}
 
 repositories {
-  mavenLocal()
-  jcenter() // helps with JMS!
-  maven {
-    url "https://repository.jboss.org/maven2" // "https://repository.jboss.org/nexus/content/groups/public"
-  }
-  maven {
-    url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/"
-  }
-  mavenCentral()
+	mavenLocal()
+	jcenter() // helps with JMS!
+	maven {
+		url "https://repository.jboss.org/maven2" // "https://repository.jboss.org/nexus/content/groups/public"
+	}
+	maven {
+		url "https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/"
+	}
+	mavenCentral()
 	maven { url 'https://jitpack.io' }
 }
 
-dependencyManagement {
-	imports {
-		//VAADIN: mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
-		mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES // SPRING
+tasks.withType(JavaCompile).configureEach {
+	options.encoding = 'UTF-8'
+	options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters', '-g', '-Xmaxwarns', '999'])
+	options.release.set(21) // javac --release 7..21+
+	options.deprecation = true
+
+	options.errorprone {
+		enabled = true
+		disableWarningsInGeneratedCode = true
+		excludedPaths = ".*/(generated|test).*/.*"
+		disable("MissingSummary")
+		disable("UnusedVariable")
+		errorproneArgs = ["--illegal-access=warn"]
 	}
 }
 
-tasks.withType(JavaCompile).configureEach {
-  options.encoding = 'UTF-8'
-  options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters', '-g', '-Xmaxwarns', '999'])
-  options.release.set(17) // javac --release 7..21+
-  options.deprecation = true
-
-  options.errorprone {
-    enabled = true
-    disableWarningsInGeneratedCode = true
-    excludedPaths = ".*/(generated|test).*/.*"
-    disable("MissingSummary")
-    disable("UnusedVariable")
-    errorproneArgs = ["--illegal-access=warn"]
-  }
-}
-
 dependencies {
-  errorprone "com.google.errorprone:error_prone_core:latest.release"
+	errorprone "com.google.errorprone:error_prone_core:latest.release"
 
-  implementation(libs.javax.annotationApi) // @Resource
+	implementation(libs.jakarta.activationApi) // @Resource
 	implementation(libs.slf4jApi, libs.slf4jJCL, libs.slf4jLog4j)
 
-	compileOnly libs.javaxServletApi
+	compileOnly libs.javaxServletApi, libs.jakartaServletApi
 
-  implementation libs.bundles.springMini, libs.bundles.springSecurity
+	implementation libs.bundles.springMini, libs.bundles.springSecurity
 
-  implementation project(':click')
-  implementation project(':click-extras')
-  implementation project(':click-cayenne')
-  implementation project(':click-velocity')
+	implementation project(':click')
+	implementation project(':click-extras')
+	implementation project(':click-cayenne')
+	implementation project(':click-velocity')
 
-  implementation 'org.apache.cayenne:cayenne-server:3.0.2'
-  implementation("org.apache.poi:poi:3.6")
-  implementation("org.objectstyle.ashwood:ashwood:2.0")
+	implementation 'org.apache.cayenne:cayenne-server:3.0.2'
+	implementation("org.apache.poi:poi:3.6")
+	implementation("org.objectstyle.ashwood:ashwood:2.0")
 	implementation('commons-collections:commons-collections:3.+')
 
-  implementation("hsqldb:hsqldb:1.8.0.10")
-  implementation("javax.servlet:jstl:1.1.2")
-  implementation("opensymphony:oscache:2.4.1")// "javax.jms:jms:1.1"
+	implementation("hsqldb:hsqldb:1.8.0.10")
+	implementation("javax.servlet:jstl:1.1.2")
+	implementation("opensymphony:oscache:2.4.1")// "javax.jms:jms:1.1"
 
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-cache'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-	implementation 'org.springframework.boot:spring-boot-starter-logging'
+	implementation 'org.springframework.boot:spring-boot-starter:latest.release'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:latest.release'
+	implementation 'org.springframework.boot:spring-boot-starter-freemarker:latest.release'
+	implementation 'org.springframework.boot:spring-boot-starter-logging:latest.release'
+	implementation 'org.springframework.boot:spring-boot-starter-web:latest.release'
+	implementation 'org.springframework.boot:spring-boot-starter-security:latest.release'
 //	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 //	implementation(libs.jdbc.h2)
 //	implementation('com.github.magicprinc:hibean:1.8.3')
@@ -90,13 +79,15 @@ dependencies {
 //	implementation("io.ebean:ebean-platform-h2:latest.release")
 //	implementation(libs.bundles.jackson)
 //	annotationProcessor("io.ebean:querybean-generator:latest.release")
-	implementation libs.logback
+	//implementation libs.logback
 	implementation(libs.springBootStarterValidation, libs.springBootStarterWeb, libs.bundles.upgradeBootApp)
-	implementation("org.apache.tomcat.embed:tomcat-embed-core:9.0.+", "org.apache.tomcat.embed:tomcat-embed-el:9.0.+", "org.apache.tomcat.embed:tomcat-embed-websocket:9.0.+")
+	implementation 'com.devinotele:javax-jakarta-servlet-adapter:2.0'
+  implementation("org.projectlombok:lombok:1.18.+!!")
 
-  //*** TEST TEST TEST
-  testImplementation libs.bundles.junit
-  testImplementation project(':click-mock')
+	//*** TEST TEST TEST
+	testImplementation libs.bundles.junit
+	testImplementation project(':click-mock')
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:latest.release'
 }
 configurations.configureEach { // .implementation  // https://tomgregory.com/how-to-exclude-gradle-dependencies/
 	exclude group: "velocity", module: "velocity" // 1.3 they come from somewhere..
@@ -109,41 +100,28 @@ configurations.configureEach { // .implementation  // https://tomgregory.com/how
 	exclude group: "org.jboss.slf4j", module: "slf4j-jboss-logmanager"
 
 	exclude group: "com.mchange", module: "c3p0"
-	exclude group: 'com.google.guava', module: 'listenablefuture'
-	exclude group: "javax.servlet", module: "servlet-api" // we use jakarta artifact with javax package
 }
 
 idea { module { downloadJavadoc = true; downloadSources = true } }
 
 test {
-  useJUnitPlatform()
-  testLogging {
-    events "passed", "skipped", "failed"
-    showStandardStreams = true // show standard out & err of the test JVM on the console
-    showExceptions = true
-    exceptionFormat = 'full'
-  }
-  enableAssertions = true
-  maxHeapSize = "500m"
-
-  systemProperty("file.encoding", "UTF-8")
-  systemProperty("user.language", "en")
-  Locale.setDefault(new Locale("en", "US"));
-}
-lombok { version = "latest.release" }
-sonarLint { ignoreFailures = true }
-tasks.named("sonarlintMain").configure {
-	onlyIf { // gradle build -Psonarlint=true  -or- -Dsonarlint=true
-		(project.hasProperty('sonarlint') && 'true'.equalsIgnoreCase(project.property('sonarlint').toString())) || 'true'.equalsIgnoreCase(System.getProperty('sonarlint'))
+	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+		showStandardStreams = true // show standard out & err of the test JVM on the console
+		showExceptions = true
+		exceptionFormat = 'full'
 	}
-}
-tasks.named("sonarlintTest").configure {
-	onlyIf {
-		(project.hasProperty('sonarlint') && 'true'.equalsIgnoreCase(project.property('sonarlint').toString())) || 'true'.equalsIgnoreCase(System.getProperty('sonarlint'))
-	}
-}
+	enableAssertions = true
+	maxHeapSize = "500m"
 
-gretty {// https://gretty-gradle-plugin.github.io/gretty-doc/Switching-between-servlet-containers.html
-	servletContainer = 'tomcat9'
-	jvmArgs = ['-ea', '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED']
+	systemProperty("file.encoding", "UTF-8")
+	systemProperty("user.language", "en")
+	Locale.setDefault(new Locale("en", "US"));
+}
+lombok {
+	version = "latest.release!!"
+}
+tasks.named('bootRun') {
+	systemProperty 'server.tomcat.basedir', "${buildDir}/tomcat"
 }
